# idd-climate-models

./: .gitignore  CLAUDE.md  dataset_summary.txt  environment.yml  pyproject.toml  refactor.md  test_draw_mapping.py  test_nc_file.py  test_vendored_imports.py
.claude/: memory.md
notebooks/: Untitled-1.ipynb  analysis.ipynb  analysis_script.ipynb  detect_time_bins.ipynb  file_checking_functions.py  model_structure_utils.py  model_validation.py  process_variable_frequency_usage_data (1).csv  processing_log.py  radius_and_compare.py  taylor_comparison.ipynb  taylor_comparison.py  test_02_process_variable.ipynb  utility_functions.py
notebooks/01_process_raw_to_climada_input_test/: 00_orchestrator.py  README.md  orchestrator_utils.py
notebooks/archive/01_run_tc_risk/: 01_create_time_period_chunks.ipynb  01_create_time_period_chunks_parallel.py  02_run_tc_risk_one_off.ipynb  1a_create_tc_risk_input_folder.py  2a_create_tc_risk_output_folders.py  2b_run_global_tc_risk.py  2c_run_basin_tc_risk.py  c_create_log.py  process_tc_risk.py  reference_namelist.py  run_tc_risk.py
notebooks/archive/02_run_climada/: 03.ipynb  (+8 more)
notebooks/pre_process/: 01_fill_and_yearly_split_parallel.ipynb  fill_and_yearly_split.ipynb
src/idd_climate_models/: add_tc_params.py  climate_file_functions.py  constants.py  diagnose_issue.py  dictionary_utils.py  io_compare_utils.py  orchestrator_utils.py  resource_functions.py  result_functions.py  tc_estimation.py  tc_risk_functions.py  time_period_functions.py  validate_model_functions.py  validation_functions.py  verify_params.py  zarr_functions.py
(+93 files in other folders)
