[project]
name = "idd-climate-models"
version = "0.1.0"
description = ""
authors = [
    {name = "Bobby Reiner",email = "bcreiner@uw.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "xarray (>=2025.10.1,<2026.0.0)",
    "netcdf4 (>=1.7.3,<2.0.0)",
    "global-land-mask (>=1.0.0,<2.0.0)",
    "cfgrib (>=0.9.15.1,<0.10.0.0)",
    "cftime (>=1.6.5,<2.0.0)",
    "cartopy (>=0.25.0,<0.26.0)",
    "dask (>=2025.11.0,<2026.0.0)",
    "distributed (>=2025.11.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
